--- a/saudiSubscription/Info.plist
+++ b/saudiSubscription/Info.plist
@@ -36,7 +36,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>SubscriptionTableViewController</string>
+					<string>IPOsTableViewController</string>
 				</dict>
 			</array>
 		</dict>
